feat(device) detect new brand Galaxy Innovations model: Uni 2 feat(device) detect brand Gome model: C51 feat(device) detect brand Hyundai model: Ultra Vision Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7771,9 +7771,11 @@ Huawei:
 
 # Hyundai
 Hyundai:
-  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|G(24027|2552[34])K|W25042L|HP554O|Seoul S8|L503F Plus|HT0701L16|HT0704K08|HT1004L16|HT1004LI16|Koral_8W2|Eternity[_ ]G25'
+  regex: 'Hyundai|Ultra (?:Active|Air|Charm|Dream|Energy|Latitude|Link|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)|Ultra_Vision_Plus|G(24027|2552[34])K|W25042L|HP554O|Seoul S8|L503F Plus|HT0701L16|HT0704K08|HT1004L16|HT1004LI16|Koral_8W2|Eternity[_ ]G25'
   device: 'smartphone'
   models:
+    - regex: 'Ultra[_ ]Vision[_ ]Plus'
+      model: 'Ultra Vision Plus'
     - regex: 'Ultra (Active|Air|Charm|Dream|Energy Lite|Energy Plus|Energy|Latitude|Link|Live II|Live|Shadow|Shine|Storm|Style|Sync|Trend|Vision|Wave)'
       model: 'Ultra $1'
     - regex: 'Seoul S8'
@@ -20783,6 +20785,8 @@ Gome:
       model: 'C7'
     - regex: 'GOME[_ ](?:2017X05A)(?:[);/ ]|$)'
       model: 'C71'
+    - regex: 'GOME[_ ](?:2017X82A)(?:[);/ ]|$)'
+      model: 'C51'
     - regex: 'GOME[_ ](?:2016G68A)(?:[);/ ]|$)'
       model: 'K1'
     - regex: 'GOME[_ ](?:2016M25A)(?:[);/ ]|$)'
@@ -24554,6 +24558,12 @@ Stylo:
       model: 'S57 Azure'
     - regex: 'S57_ALURE'
       model: 'S57 Alure'
+
+# galaxy innovations or GI  (www.galaxy-innovations.ru)
+Galaxy Innovations:
+  regex: 'GI UNI2(?:[);/ ]|$)'
+  device: 'tv'
+  model: 'Uni 2'
 
 # Devices with undectable brand, but detectable model
 Unknown:
