feat(device) detect brand Carrefour model: CT735 feat(device) detect brand F2 Mobile model: C8 Finger feat(device) test detect brand Accent model: Cameleon C5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4126,14 +4126,14 @@ Cat:
 
 # Carrefour
 Carrefour:
-  regex: 'CT(?:10[0123]0|7[12]0|820)(?:W|FR)?(?:[);/ ]|$)'
+  regex: 'CT(?:10[0123]0|7[12]0|820|735_16GB)(?:W|FR)?(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'CT820'
       model: 'Touch Tablet Neo2'
     - regex: 'CT(10[0123]0(?:W|FR)?)'
       model: 'CT$1'
-    - regex: 'CT(7[12]0(?:W|FR)?)'
+    - regex: 'CT(7[12]0(?:W|FR)?|735)'
       model: 'CT$1'
 
 # Celkon
@@ -24484,13 +24484,15 @@ ZIFRO:
 
 # F2 (f2mexico.com)
 F2 Mobile:
-  regex: '(?:LT5216|F80s_plus)(?:[);/ ]|$)'
+  regex: '(?:LT5216|F80s_plus|C8Finger)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'F80s_plus'
       model: 'F80s Plus'
     - regex: '(LT5216)'
       model: '$1'
+    - regex: 'C8Finger'
+      model: 'C8 Finger'
 
 # SmartBook
 SmartBook:
