--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -2248,3 +2248,39 @@
     model: CT735
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KFTRPWI) AppleWebKit/537.36 (KHTML, like Gecko) Silk/90.2.49 like Chrome/90.0.4430.91 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Mobile Silk
+    version: 90.2.49
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Amazon
+    model: Fire HD 10 Plus (2021)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KFTRWI) AppleWebKit/537.36 (KHTML, like Gecko) Silk/84.3.5 like Chrome/84.0.4147.125 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Mobile Silk
+    version: 84.3.5
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Amazon
+    model: Fire HD 10 (2021)
+  os_family: Android
+  browser_family: Chrome
