Adds detection for tvOS and removes Apple TV (#6546)
* Adds detection for tvOS and removes Apple TV
* tvOS is mostly based on iOS >= 8.
* Add Apple TV to iOS familly
* Remove Apple TV detection
* Improves detection of tvOS
* Improves detection for Mobile Safari browser

Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -650,11 +650,11 @@
 -
   user_agent: XBMC/PRE-11.0 Git:20110623-62171b3 (iOS; 11.0.0 AppleTV2,1; http://www.xbmc.org)
   os:
-    name: Apple TV
+    name: tvOS
     short_name: ATV
-    version:
-    platform:
-    family: Apple TV
+    version: 11.0.0
+    platform: ARM
+    family: iOS
 -
   user_agent: Mozilla/5.0 (SAMSUNG; SAMSUNG-GT-S7230E-VODAFONE/S723EBUJJ3; U; Bada/1.0; en-us) AppleWebKit/533.1 (KHTML, like Gecko) Dolfin/2.0 Mobile WQVGA SMM-MMS/1.2.0 NexPlayer/3.0 profile/MIDP-2.1 configuration/CLDC-1.1 OPN-B
   os:
@@ -1864,6 +1864,14 @@
     platform: ARM
     family: Chrome OS
 -
+  user_agent: AppleCoreMedia/1.0.0.17J586 (Apple TV; U; CPU OS 13_0 like Mac OS X; nb_no)
+  os:
+    name: tvOS
+    short_name: ATV
+    version: "13.0"
+    platform: ARM
+    family: iOS
+-
   user_agent: atc/1.0 watchOS/6.0 model/Watch4,2 hwp/t8006 build/17R575 (6; dt:191)
   os:
     name: watchOS
@@ -1901,6 +1909,30 @@
     name: watchOS
     short_name: WAS
     version: 3.2.2
+    platform: ARM
+    family: iOS
+-
+  user_agent: Mozilla/5.0 (Apple TV; U; CPU iPhone OS 10_1_1 like Mac OS X; en-US) FOX Sports GO/1160
+  os:
+    name: tvOS
+    short_name: ATV
+    version: 10.1.1
+    platform: ARM
+    family: iOS
+-
+  user_agent: H443NM7F8H.CBSSportsApp/1.0 iOS/9.0 model/AppleTV5,3 build/13T393
+  os:
+    name: tvOS
+    short_name: ATV
+    version: "9.0"
+    platform: ARM
+    family: iOS
+-
+  user_agent: CBS_Sports;AppleTV;H443NM7F8H.CBSSportsApp/1.0 iOS/9.0 AppleTV/9.0 model/AppleTV5,3 hwp/t7000 build/13T5379f (3; dt:119)
+  os:
+    name: tvOS
+    short_name: ATV
+    version: "9.0"
     platform: ARM
     family: iOS
 -
