--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -1114,7 +1114,10 @@
   browser_family: Unknown
 -
   user_agent: iTunes-AppleTV/4.1
-  os: [ ]
+  os:
+    name: iOS
+    version: ""
+    platform: ""
   client:
     type: mediaplayer
     name: iTunes
@@ -1123,14 +1126,14 @@
     type: tv
     brand: Apple
     model: Apple TV
-  os_family: Unknown
+  os_family: iOS
   browser_family: Unknown
 -
   user_agent: AppleCoreMedia/1.0.0.12B466 (Apple TV; U; CPU OS 8_1_3 like Mac OS X; en_us)
   os:
     name: iOS
-    version: 8.1.3
-    platform: ""
+    version: "8.1.3"
+    platform: ARM
   client: null
   device:
     type: tv
@@ -1141,9 +1144,9 @@
 -
   user_agent: XBMC/PRE-11.0 Git:20110623-62171b3 (iOS; 11.0.0 AppleTV2,1; http://www.xbmc.org)
   os:
-    name: Apple TV
-    version: ""
-    platform: ""
+    name: tvOS
+    version: 11.0.0
+    platform: ARM
   client:
     type: mediaplayer
     name: XBMC
@@ -1152,7 +1155,7 @@
     type: tv
     brand: Apple
     model: Apple TV 2
-  os_family: Apple TV
+  os_family: iOS
   browser_family: Unknown
 -
   user_agent: 'OPR/22.0.1481.0 OMI/4.2.12.29, KreaTV/0.0.0.0 (ARRIS, IPC1100, wired)CM[00.01]'
@@ -6587,6 +6590,45 @@
     brand: Panasonic
     model: Smart TV (2021)
   os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: AppleCoreMedia/1.0.0.12H911 (Apple TV; U; CPU OS 8_4_4 like Mac OS X; en_us)
+  os:
+    name: iOS
+    version: 8.4.4
+    platform: ARM
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: AppleCoreMedia/1.0.0.18J383 (Apple TV; U; CPU OS 14_0 like Mac OS X; en_us)
+  os:
+    name: tvOS
+    version: "14.0"
+    platform: ARM
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Apple TV; U; CPU iPhone OS 10_1_1 like Mac OS X; en-US) FOX Sports GO/1160
+  os:
+    name: tvOS
+    version: 10.1.1
+    platform: ARM
+  client: null
+  device:
+    type: tv
+    brand: Apple
+    model: Apple TV
+  os_family: iOS
   browser_family: Unknown
 -
   user_agent: 'Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.129.Driver5.9 , _TV_MT5802/018.004.007.031 (Philips, PUS6203, wireless)  CE-HTML/1.0 NETTV/4.6.0.1 SignOn/2.0 SmartTvA/5.0.0 en'
