Rename brand 2F Mobile to F2 Mobile

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -23984,15 +23984,19 @@ YUHO:
     - regex: '(?:YUHO_)?(Vast2?|O[12]|Y2|Netra(?:[_ ](?:Plus|Lite))?)(?:[);/ ]|$)'
       model: '$1'
 
-# 2F Mobile
-2F Mobile:
-  regex: '(Z8PLUS|Z8POCKET)(?:[);/ ]|$)'
+# F2 Mobile OR 2F Mobile (f2mexico.com)
+F2 Mobile:
+  regex: '(?:Z8PLUS|Z8POCKET|LT5216|F80s_plus)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Z8PLUS'
       model: 'Z8 Plus'
     - regex: 'Z8POCKET'
       model: 'Z8 Pocket'
+    - regex: 'F80s_plus'
+      model: 'F80s Plus'
+    - regex: '(LT5216)'
+      model: '$1'
 
 # Zaith
 Zaith:
@@ -24421,16 +24425,6 @@ ZIFRO:
   models:
     - regex: '(ZT-9700)3G'
       model: '$1 3G'
-
-# F2 (f2mexico.com)
-F2 Mobile:
-  regex: '(?:LT5216|F80s_plus)(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: 'F80s_plus'
-      model: 'F80s Plus'
-    - regex: '(LT5216)'
-      model: '$1'
 
 # SmartBook
 SmartBook:
