--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -7239,7 +7239,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: 2F Mobile
+    brand: F2 Mobile
     model: Z8 Plus
   os_family: Android
   browser_family: Chrome
@@ -7257,7 +7257,7 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: 2F Mobile
+    brand: F2 Mobile
     model: Z8 Pocket
   os_family: Android
   browser_family: Chrome
