feat(app) detect app TikTok For iOS

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -695,3 +695,9 @@
     type: mobile app
     name: Unibox
     version: ""
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 12_5_4 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 musical_ly_21.0.0 JsSdk/2.0 NetType/WIFI Channel/App Store ByteLocale/ru Region/UA ByteFullLocale/ru-RU isDarkMode/0 WKWebView/1
+  client:
+    type: mobile app
+    name: TikTok
+    version: 21.0.0
