--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -358,10 +358,7 @@
   version: '$1'
 
 # TikTok (https://apps.apple.com/app/id835599320 | https://play.google.com/store/apps/details?id=com.zhiliaoapp.musically)
-- regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
-  name: 'TikTok'
-  version: '$1'
-- regex: 'AppName/musical_ly app_version/(\d+\.[\.\d]+)?'
+- regex: '(?:TikTok[/ ]|musical_ly_|AppName/musical_ly app_version/)(\d+\.(?:[\.\d]+))?'
   name: 'TikTok'
   version: '$1'
 
