feat(os) detect OS HarmonyOS
issue 6832

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2391,3 +2391,11 @@
     version: "15.0"
     platform: ""
     family: iOS
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; HarmonyOS; TAS-AL00; HMSCore 6.0.1.306) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.2.301 Mobile Safari/537.36
+  os:
+    name: HarmonyOS
+    short_name: HAR
+    version: ""
+    platform: ""
+    family: Android
