--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -96,6 +96,10 @@
 ##########
 # Custom Android Roms
 ##########
+- regex: 'HarmonyOS'
+  name: 'HarmonyOS'
+  version: ''
+
 - regex: 'RazoDroiD(?: v(\d+[\.\d]*))?'
   name: 'RazoDroiD'
   version: '$1'
