feat(os) added version detection for HarmonyOS and Detect device Honor30 for Huawei brand

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7154,7 +7154,7 @@ Huawei:
       model: 'Honor 20 Pro'
     - regex: '(MAR-LX1H|YAL-AL50)(?:[);/ ]|$)'
       model: 'Honor 20S'
-    - regex: '(?:BMH-AN[12]0)(?:[);/ ]|$)'
+    - regex: 'BMH-(?:AN[12]0|TN10)(?:[);/ ]|$)'
       model: 'Honor 30'
     - regex: 'EBG-[AT]N00(?:[);/ ]|$)'
       model: 'Honor 30 Pro'
