--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -96,9 +96,9 @@
 ##########
 # Custom Android Roms
 ##########
-- regex: 'HarmonyOS'
+- regex: 'HarmonyOS(?:[/ ](\d+[\.\d]+))?'
   name: 'HarmonyOS'
-  version: ''
+  version: '$1'
 
 - regex: 'RazoDroiD(?: v(\d+[\.\d]*))?'
   name: 'RazoDroiD'
