--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1215,3 +1215,19 @@
     model: iPhone
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BMH-TN10 Build/HUAWEIBMH-TN10; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36 T7/12.23 BDOS/1.0 (HarmonyOS 2.1.0) SP-engine/2.35.0 baidubox app/12.23.5.10 (Baidu; P1 10) NABar/1.0
+  os:
+    name: HarmonyOS
+    version: 2.1.0
+    platform: ""
+  client:
+    type: mobile app
+    name: Baidu Box App
+    version: 12.23.5.10
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Honor 30
+  os_family: Android
+  browser_family: Unknown
