feat(browser) detect browser GoBrowser for symbian

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3914,3 +3914,13 @@
     engine: Blink
     engine_version: ""
     family: Chrome
+
+-
+  user_agent: Nokia6120c/GoBrowser/2.0.290
+  client:
+    type: browser
+    name: GoBrowser
+    version: 2.0.290
+    engine: ""
+    engine_version: ""
+    family: Unknown
