--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1667,6 +1667,11 @@
   engine:
     default: 'WebKit'
 
+# GoBrowser
+- regex: 'GoBrowser(?:/(\d+[\.\d]+))?'
+  name: 'GoBrowser'
+  version: '$1'
+
 #Nokia Browser
 - regex: '(?:NokiaBrowser|BrowserNG)(?:/(\d+[\.\d]+))?'
   name: 'Nokia Browser'
