feat(device) detect new brand Vexia model: Zippers Tab 10i 3G feat(device) detect brand Odys model: Maven G10 feat(device) detect brand Inco model: Matter

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12447,7 +12447,7 @@ O2:
 
 # Odys (odys.de)
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|MAVEN_G10|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -12528,6 +12528,8 @@ Odys:
       model: 'Thor 10 Plus 3G'
     - regex: 'NOTOSplus3G'
       model: 'Notos Plus 3G'
+    - regex: 'MAVEN_G10'
+      model: 'Maven G10'
 
     # explicit smartphones models
     - regex: 'NEO6[_ ]LTE'
@@ -17953,13 +17955,15 @@ Wexler:
 
 # Inco (incomobile.com)
 Inco:
-  regex: '(?:Inco[ _](Aurora II|Colors|Sphere|Plain[_ ]2S?|Plain2 S|Flex(?: 2S)?|S4|Bloom(?: 2)?)|(Horizon_S|Horizon \+))(?:[);/ ]|$)'
+  regex: '(?:Inco[ _](Aurora II|Colors|Sphere|Plain[_ ]2S?|Plain2 S|Flex(?: 2S)?|S4|Bloom(?: 2)?)|(Horizon_S|Horizon \+|MATTER))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Inco[ _])?(Plain[_ ]2S?|Colors|Horizon_S|Horizon \+|Aurora II|Flex(?: 2S)?|S4|Bloom(?: 2)?)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Plain2 S'
       model: 'Plain 2S'
+    - regex: 'MATTER'
+      model: 'Matter'
     - regex: 'Inco Sphere( 3)?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Sphere$1'
@@ -24585,6 +24589,12 @@ Galaxy Innovations:
 Benzo:
   regex: '(Class S300 LTE)(?:[);/ ]|$)'
   device: 'smartphone'
+  model: '$1'
+
+# Vexia (www.vexia.eu)
+Vexia:
+  regex: '(Zippers Tab 10i 3G)'
+  device: 'tablet'
   model: '$1'
 
 # Devices with undectable brand, but detectable model
