feat(device) detect new brand AIRON model: AirBook Pro 8S fix(device) detect brand Amazon models: Fire HD 10 Plus (2021), Fire HD 10 (2021) feat(device) detect brand NEC model: LAVIE Tab E 7SD1 feat(device) detect brand Sony model: Xperia Tablet Z

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5888,7 +5888,7 @@ Sony:
       model: 'Xperia X Performance Dual'
 
     # SONY: explicit tablet models
-    - regex: '(?:SGP(?:311|312|321)|(Sony)?SO-03E)(?:[);/ ]|$)'
+    - regex: '(?:SGP(?:311|312|321)|(Sony)?SO-03E|Tablet Z LTE)(?:[);/ ]|$)'
       model: 'Xperia Tablet Z'
       device: 'tablet'
     - regex: 'SGP712(?:[);/ ]|$)'
@@ -12042,9 +12042,9 @@ Nobby:
   device: 'smartphone'
   model: '$1'
 
-# nec
+# nec or nec lavie (www.nec-lavie.jp)
 NEC:
-  regex: 'NEC[ _\-]|KGT/2\.0|PC-TE508(?:S1|[BH]AW)|PC-TE510(?:HAW|BAL|S1)|PC-TS708T1W|PC-TS507N1S|PC-TE507JAW|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N|(?:N-06C|N-02E|LAVIE Tab E (?:10|8)FHD1)(?:[);/ ]|$)'
+  regex: 'NEC[ _\-]|KGT/2\.0|PC-TE508(?:S1|[BH]AW)|PC-TE510(?:HAW|BAL|S1)|PC-TS708T1W|PC-TS507N1S|PC-TE507JAW|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N|(?:N-06C|N-02E|LAVIE Tab E (?:10|8)FHD1|7SD1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'N-06C(?:[);/ ]|$)'
@@ -12075,9 +12075,9 @@ NEC:
     - regex: 'PC-TE508S1(?:[);/ ]|$)'
       device: 'tablet'
       model: 'LAVIE Tab E TE508'
-    - regex: '(LAVIE Tab E (?:10|8)FHD1)(?:[);/ ]|$)'
+    - regex: 'LAVIE (Tab E (?:(?:10|8)FHD1|7SD1))(?:[);/ ]|$)'
       device: 'tablet'
-      model: '$1'
+      model: 'LAVIE $1'
 
 # Neffos (sub brand TP-Link) (neffos.com)
 Neffos:
@@ -16366,7 +16366,7 @@ Anker:
 
 # Kindle
 Amazon:
-  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1'
+  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|TRP?WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -24007,6 +24007,13 @@ ONYX BOOX:
   regex: 'KON_TIKI(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Kon Tiki'
+
+# AIRON (airon.ua)
+AIRON:
+  regex: 'AIRBOOK PRO 8S(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'AirBook Pro 8S'
+
 
 # GFive or G'Five (www.gfivepakistan.com)
 GFive:
