--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -2338,3 +2338,93 @@
     model: Maven G10
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KFTRPWI) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.149 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 80.0.3987.149
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Amazon
+    model: Fire HD 10 Plus (2021)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; LAVIE Tab E 7SD1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 92.0.4515.131
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: NEC
+    model: LAVIE Tab E 7SD1
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KFTRWI) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 92.0.4515.131
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Amazon
+    model: Fire HD 10 (2021)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Xperia Tablet Z LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.78 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 85.0.4183.78
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Sony
+    model: Xperia Tablet Z
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; AIRBOOK PRO 8S Build/MXC89L; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/53.0.2785.124 Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 53.0.2785.124
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: AIRON
+    model: AirBook Pro 8S
+  os_family: Android
+  browser_family: Chrome
