feat(device) detect brand iMars model: Milky Way M2 feat(device) detect brand Qubo model: MINERVA

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20327,7 +20327,7 @@ Qumo:
 
 # Qubo (qubomobile.com)
 Qubo:
-  regex: '(Cronos)(?:[);/ ]|$)'
+  regex: '(Cronos|MINERVA)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -21796,13 +21796,15 @@ Primux:
 
 # iMars
 iMars:
-  regex: '(?:IMARS VEGA X7|VIVI_8)(?:[);/ ]|$)'
+  regex: '(?:IMARS VEGA X7|VIVI_8|MILKY_WAY_M2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'IMARS VEGA X7'
       model: 'Vega X7'
     - regex: 'VIVI_8'
       model: 'VIVI 8'
+    - regex: 'MILKY_WAY_M2'
+      model: 'Milky Way M2'
 
 # Logic (logicmobility.com)
 Logic:
