--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2391,3 +2391,21 @@
     model: Uni 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; MITO_3255 Build/PTT1.190222.001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.91 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 69.0.3497.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mito
+    model: "3255"
+  os_family: Android
+  browser_family: Chrome
