feat(device) detect new brand Mymaga model: MOVE S201
issue #6780

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9193,6 +9193,12 @@ Kyocera:
     - regex: '(KWC|QC)-?([a-z0-9]+)'
       model: '$1-$2'
 
+# Mymaga (support.mymaga.eu)
+Mymaga:
+  regex: '(MOVE_S201)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
   regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[67]|1065G|0701_1|0702|0805_1|1070)'
