feat(browser) Improved browser engine detection for Tenta browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1557,8 +1557,14 @@
   name: 'UC Browser'
   version: ''
 
-#Tenta Browser
 #It should be checked before Chrome since the UA contains the Chrome
+-
+#Tenta Browser (https://play.google.com/store/apps/details?id=com.tenta.android)
+- regex: 'Chrome/.+Tenta/(\d+[\.\d]+)'
+  name: 'Tenta Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
 - regex: 'Tenta/(\d+[\.\d]+)'
   name: 'Tenta Browser'
   version: '$1'
