feat(device) detect brand Lark models: FreeMe X4 7, FreeMe X4 7HD

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9427,6 +9427,10 @@ Lark:
       model: 'FreeMe X4 7HD'
     - regex: 'FreeMe X4[ _]9'
       model: 'FreeMe X4 9'
+    - regex: 'FreeMe X4 7'
+      model: 'FreeMe X4 7HD'
+    - regex: 'FreeMe X4 7HD'
+      model: 'FreeMe X4 7'
     - regex: 'FreeBird 5WiFi'
       model: 'FreeBird 5 WiFi'
     - regex: '(?:Lark[ _-])?Evolution[ _](X2 7 3G-GPS|X4[_ ]10\.1|10|X4[_ ]7[ _]IPS)'
