update device alias regex and update device indexes

--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -185,3 +185,99 @@
 - user_agent: Mozilla/5.0 (Linux; Android 5.1; MotoE2(4G-LTE)) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
   alias:
     name: MotoE2(4G-LTE)
+
+- user_agent: Mozilla/5.0 (Linux; Android 10; JEF-NX9; HMSCore 5.3.0.312) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.8.303 Mobile Safari/537.36
+  alias:
+    name: JEF-NX9
+
+- user_agent: Mozilla/5.0 (Windows Mobile 10; Android 10.0; Microsoft; Lumia 950XL) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.106 Mobile Safari/537.36 Edge/40.15254.603
+  alias:
+    name: Lumia 950XL
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Mobile Safari/537.36
+  alias:
+    name: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; V1824BA; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/7.5.12.0
+  alias:
+    name: V1824BA
+
+- user_agent: Mozilla/5.0 (Linux; U; Android 2.3.4; zh-cn; GIO-GiONEE_C600/CBD75B04_01_T9151 ; 320*480; CTC/2.0) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  alias:
+    name: GIO-GiONEE_C600
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; zh-cn; Coolpad-8076_TD/1.0 Android/2.3.5 Release/03.11.2012 Browser/AppleWebKit533.1 Build/MocorDroid2.3.5) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  alias:
+    name: Coolpad-8076_TD
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 1.6; fr-fr; LG-GT540 ; Build/Donut) AppleWebKit/528.5+ (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1 Java/Jbed/7.0 Profile/MIDP-2.1 Configuration/CLDC-1.1 MMS/LG-Android-MMS-V1.0/1.2
+  alias:
+    name: LG-GT540
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.2;; xx-xx; Fly IQ436 Build/JZO57K) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  alias:
+    name: IQ436
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0;  Azumi_IRO_A4_Q  Release/07.13.2016 Build/MRA58k) AppleWebKit/737.36 (KHTML, like Geck) Version/4.0 Chrome/49.0.2623.105 Mobile Safari/537.36
+  alias:
+    name: Azumi_IRO_A4_Q
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.0.1; NVIDIA_SHIELD_PRO_2019; smart-tv) ShieldExperience/8.0.0 (32.5.205.42; mdarcy) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Safari/537.36
+  alias:
+    name: SHIELD_PRO_2019
+
+- user_agent: Mozilla/5.0 (Linux; Android 6.0; Azumi_IRO_A4_Q Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/52.0.2743.98 Mobile Safari/537.36
+  alias:
+    name: Azumi_IRO_A4_Q
+
+- user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; Microsoft; RM-1067) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Mobile Safari/537.36 Edge/15.15063
+  alias:
+    name: RM-1067
+
+- user_agent: Mozilla/5.0 (compatible; MSIE 9.0; Windows Phone OS 7.5; Trident/5.0; IEMobile/9.0; Xbox)
+  alias:
+    name: Xbox
+
+- user_agent: Mozilla/5.0 (Linux; U; Android 4.0.3; ETON T860) Linux/3.0.8-svn5727 Release/10.31.2013  AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  alias:
+    name: T860
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.4; ru-ru; MN8J2ZP/A Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  alias:
+    name: MN8J2ZP/A
+
+- user_agent: Mozilla/5.0 (Linux; Android 9; arm; CPH2083) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.116 YaBrowser/20.7.2.70.00 Mobile Safari/537.36
+  alias:
+    name: CPH2083
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; STK-LX3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36
+  alias:
+    name: STK-LX3
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; arm_64; CPH2067) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.116 YaBrowser/20.7.0.101.00 SA/3 Mobile Safari/537.36
+  alias:
+    name: CPH2067
+-
+  user_agent: Microsoft Office Excel/16.48.411 (Mac OS/11.2.3; Desktop; es-MX; NonAppStore; Apple/MacBookPro15,2)
+  alias:
+    name: MacBookPro15,2
+-
+  user_agent: Microsoft Office PowerPoint/2.48.404 (iOS/14.4.2; Tablet; es-MX; AppStore; Apple/iPad7,11)
+  alias:
+    name: iPad7,11
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; ru; Redmi Note 9S Build/RKQ1.200826.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.10.0.1163 UCTurbo/1.10.3.900 Mobile Safari/537.36
+  alias:
+    name: Redmi Note 9S
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.4.2;  zh-cn; SUPRA M74AG; Android/4.4.2; Release/11.05.2015)  AppleWebKit/534.30 (KHTML, like Gecko) Mobile Safari/534.30
+  alias:
+    name: M74AG
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 4.4.2;  zh-cn; TM-3500; Android/4.4.2; Release/09.25.2015  AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Mobile Safari/534.30
+  alias:
+    name: TM-3500
+-
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 4.2.1; WebView/3.0; NOKIA; RM-1027) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2486.0 Mobile Safari/537.36 Edge/13.10586
+  alias:
+    name: RM-1027
