feat(device) detect brand Timovi model: Yeah Go feat(device) added test detect brand Samsung model: Galaxy A3 (2015) (SM-A300F)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17032,7 +17032,7 @@ TIANYU:
 
 # Timovi
 Timovi:
-  regex: 'Tmovi[ _]|(?:Infinit[ _](?:Lite[_ ]2|X[_ ]CAM)|Infinit MX(?: Pro)?|Vision_PRO|VISION ULTRA|Epix)(?:[);/ ]|$)'
+  regex: 'Tmovi[ _]|(?:Infinit[ _](?:Lite[_ ]2|X[_ ]CAM)|Infinit MX(?: Pro)?|Vision_PRO|VISION ULTRA|Epix|Yeah_Go)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Tmovi[ _]Prime'
@@ -17055,6 +17055,8 @@ Timovi:
       model: 'Vision Ultra'
     - regex: 'Epix'
       model: 'Epix'
+    - regex: 'Yeah_Go'
+      model: 'Yeah Go'
 
 # Tooky
 Tooky:
